# zed

./: Cargo.toml
assets/locales/: en.yml  zh-CN.yml
assets/settings/: default.json
crates/archive/: Cargo.toml
crates/archive/src/: lib.rs
crates/assets/src/: assets.rs
crates/assistant/: Cargo.toml
crates/collab_ui/: Cargo.toml
crates/collab_ui/src/: collab_panel.rs  collab_titlebar_item.rs  collab_ui.rs  notification_panel.rs
crates/copilot/: Cargo.toml
crates/copilot/src/: copilot.rs
crates/editor/src/: element.rs
crates/extension/: Cargo.toml
crates/extension/src/: extension_builder.rs
crates/fs/: Cargo.toml
crates/fs/src/: fs.rs
crates/gpui/: Cargo.toml
crates/gpui/examples/: hello_world.rs  painting.html  painting.json  painting.rs  set_menus.rs  webview.rs  window_positioning.rs
crates/gpui/src/: app.rs  color.rs  geometry.rs  gpui.rs  image_cache.rs  platform.rs  scene.rs  style.rs  styled.rs  svg_renderer.rs  window.rs
crates/gpui/src/elements/: img.rs  (+4 more)
crates/http/src/: http.rs
crates/i18n/: Cargo.toml
crates/i18n/src/: lib.rs  settings.rs
crates/languages/: Cargo.toml
crates/languages/src/: go.rs  rust.rs  typescript.rs
crates/live_kit_client/examples/: test_app.rs
crates/markdown/src/: markdown.rs
crates/markdown_preview/: Cargo.toml
crates/markdown_preview/src/: markdown_preview.rs  markdown_preview_webview.rs
crates/node_runtime/: Cargo.toml
crates/node_runtime/src/: node_runtime.rs
crates/project_panel/src/: project_panel.rs
crates/recent_projects/: Cargo.toml
crates/recent_projects/src/: dev_servers.rs
crates/storybook/src/: app_menus.rs
crates/theme/src/: default_colors.rs  one_themes.rs  schema.rs
crates/theme_selector/: Cargo.toml
crates/theme_selector/src/: theme_selector.rs
crates/title_bar/: Cargo.toml
crates/title_bar/src/: application_menu.rs  title_bar.rs
crates/util/: Cargo.toml
crates/util/src/: archive.rs  process.rs  util.rs
crates/workspace/src/: pane.rs
crates/zed/: Cargo.toml
crates/zed/src/: languages.rs  main.rs
docs/src/languages/: navi.md
extensions/toml/src/: toml.rs
locales/: app.yml
(+20 files in other folders)
